--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ nav {
 
   font-family: "Poppins", serif;
 
-  background: #dc3545;
+  background: #a70817;
   color: #fff;
   padding: 1rem;
   text-align: center;
@@ -85,7 +85,7 @@ form button {
   font-family: "Poppins", serif;
   font-weight: 400
   ;
-  background-color:#dc3545;
+  background-color:#a70817;
   color: white;
   padding: 1rem;
   display: flex;
@@ -148,8 +148,8 @@ pointer-events: none;
 .button-27:hover {
 box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
 transform: translateY(-2px);
-background-color: #dc3545;
-border: 2px solid #dc3545;
+background-color: #a70817;
+border: 2px solid #a70817;
 
 }
 
@@ -199,4 +199,12 @@ button {
 
 button:hover {
   background-color: #45a049;
+}
+
+footer {
+  text-align: center;
+  padding: 15px;
+  background: #222;
+  color: white;
+  margin-top: 20px;
 }
