--- a/css/style.css
+++ b/css/style.css
@@ -50,30 +50,9 @@ main {
   padding: 1rem;
 }
 
-form label {
+form input, form textarea, form button {
   display: block;
-  margin-top: 1rem;
-}
-
-form input,
-form textarea,
-form button {
-  display: block;
-  width: 100%;
-  margin-top: 0.5rem;
-  padding: 0.5rem;
-}
-
-form label {
-  display: block;
-  margin-top: 1rem;
-}
-
-form input,
-form textarea,
-form button {
-  display: block;
-  width: 100%;
+  width: 96%;
   margin-top: 0.5rem;
   padding: 0.5rem;
 }
@@ -178,7 +157,6 @@ transform: translateY(0);
   border-radius: 5px;
   position: relative;
   width: 300px;
-  text-align: center;
 }
 
 .cancel-btn {
@@ -191,14 +169,14 @@ transform: translateY(0);
 
 button {
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #0f0f0f;
   color: white;
   border: none;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: #a70817;
 }
 
 footer {
@@ -207,4 +185,21 @@ footer {
   background: #222;
   color: white;
   margin-top: 20px;
+}
+
+
+/* under */
+.underline-small{
+  position:relative;
+  
+}
+
+.underline-small::after {
+  content: '';
+  height: 2px;
+  width: 14%;
+  background: rgb(164, 20, 4);
+  position: absolute;
+  left: calc(10% - 10%);
+  bottom: -5px;
 }
