--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ transform: translateY(0);
   right: 10px;
   font-size: 20px;
   cursor: pointer;
+  width: 8%;
 }
 
 button {
@@ -202,4 +203,13 @@ footer {
   position: absolute;
   left: calc(10% - 10%);
   bottom: -5px;
+}
+::-webkit-scrollbar {
+  width: .3rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color:#9b8b8c;
+  border-radius: .5rem;
+
 }
